assets/sass/_custom.scss
@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,400;0,700;0,800;1,400;1,700&display=swap');

body {
  font-family: 'Mulish', sans-serif;
}

.post-cover img,
figure img,
.cover img {
  object-fit: cover;
  width: 100%;
  max-height: 400px;
}

img {
  max-width: 100%;
  height: auto;
}

a:hover { color: #d70606; }

.post-tags a {
  border: 1px solid #d70606;
  color: #d70606;
}

.post-tags a:hover {
  background: #d70606;
  color: #fff;
}

